src/styles/style.css
:root {
  --background: #081d29;
  --primary-text: #f8f9f5;
  --secondary-text: rgb(255, 123, 0);
  --primary-light-text: black;
  --grey-color-1: rgb(110, 109, 109);
  --wave: #202733;
  --background-2: #202733;
  --cross-3: #ff7f50;
}

.lighttheme {
  --background: #f8f9f5;
  --primary-text: black;
  --wave: #ff7f50;
  --background-2: #ff7f50;
  --cross-3: #202733;
}

* {
  box-sizing: border-box;
  margin: 0;
  padding: 0;
}

body {
  background-color: var(--background);
  color: var(--primary-text);
  font-family: Arial, Helvetica, sans-serif;
  transition: all 1s cubic-bezier(0.6, -0.28, 0.735, 0.045);
}

ul {
  list-style: none;
}

li::before {
  content: "\003E";
  color: #ff7f50;
  font-weight: bold;
  padding-right: 10px;
}

.styleSVG {
  fill: #000000;
  stroke-width: 0.264583;
  transition: fill 2s;
  background-size: 200px 200px;
}

.svgContainer {
  width: 30px;
  height: 30px;
  margin: 2rem 2rem;
  display: flex;
  justify-content: center;
  align-items: center;
  animation: spin 2s linear infinite;
}

.styleSVG:hover {
  fill: red;
}

@keyframes spin {
  100% {
    transform-box: fill-box;
    transform: rotate(360deg);
    transform-origin: center;
  }
}

.btn-project {
  border-radius: 31px;
  border: 1px solid orange;
  background-color: #ff7f50;
  cursor: pointer;
  padding: 0.75rem 1.5rem;
}

button > a {
  text-decoration: none;
  color: black;
}

/* BASE POSITIONING AND LAYOUT */
.container {
  min-height: 70vh;
  width: 100%;
  padding-right: 1rem;
  padding-left: 1rem;
  margin-right: auto;
  margin-left: auto;
  margin-top: 4rem;
  margin-bottom: 4rem;
}

.row {
  --bs-gutter-x: 2.5rem;
  --bs-gutter-y: 0;
  display: flex;
  flex-wrap: wrap;
  margin-top: calc(var(--bs-gutter-y) * -1);
  margin-right: auto;
  margin-left: auto;
  width: 100%;
}
.row > * {
  box-sizing: border-box;
  flex-shrink: 0;
  width: 100%;
  max-width: 100%;
  padding-right: calc(var(--bs-gutter-x) / 2);
  padding-left: calc(var(--bs-gutter-x) / 2);
  margin-top: var(--bs-gutter-y);
}

.col {
  width: 50%;
  flex: 0 0 auto;
}

/* Header */
.header {
  display: flex;
  background-color: var(--background);
  transition: all 1s cubic-bezier(0.6, -0.28, 0.735, 0.045);
}
.logo {
  width: 30px;
}

.header-links {
  margin: 2rem 5rem 0 0;
  width: 40%;
  display: flex;
  justify-content: space-between;
}

.header-links h4 {
  animation: fade 1s ease-in;
}

.header-links h4:nth-child(1) {
  animation-duration: 1.25s;
}

.header-links h4:nth-child(2) {
  animation-duration: 1.5s;
}

.header-links h4:nth-child(3) {
  animation-duration: 1.75s;
}

.header-links h4:nth-child(4) {
  animation-duration: 2s;
}

/* THEME TOGGLE CSS */
.switch-pos {
  float: right;
  padding-right: 5rem;
}

.switch {
  position: relative;
  width: 3rem;
  height: 1.35rem;
  padding: 0.3rem;
  border-radius: 34px;
  border: 3px solid black;
  background-color: grey;
}

.circle {
  display: inline-block;
  border-radius: 34px;
  position: absolute;
}

.large {
  width: 0.9rem;
  height: 0.9rem;
  border-radius: 34px;
  top: 0.05rem;
  left: 0.3rem;
  background-color: orange;
  transition: all 1s cubic-bezier(0.6, -0.28, 0.735, 0.045);
}

.switch input {
  position: absolute;
  width: 100%;
  height: 100%;
  left: 0;
  top: 0;
  opacity: 0;
  z-index: 1;
  cursor: pointer;
}

.move {
  background-color: white;
  border-color: orange;
}

.move .large {
  left: 1.5rem;
}

/* Images */
.headshot {
  width: 17rem;
  margin: 0 2rem 0 auto;
  animation: fadeRight 2s cubic-bezier(0.28, 0.98, 0.26, 1);
}

/* INTRO */
.intro-block {
  min-height: 100vh;
  padding-top: 4rem;
}

.intro-desc > * {
  margin-bottom: 3rem;
  animation: fadeUp 1s both 1s;
}

.headshot-col {
  position: relative;
  width: 40%;
}
.intro-desc {
  margin: 2rem auto 0 auto;
  width: 60%;
}

.intro-desc h1 {
  font-size: 3rem;
}

.intro-para {
  width: 70%;
  margin: 1.5rem 0 0 0;
}

/* About Page */
.about-words {
  margin-top: 2.5rem;
  display: flex;
  justify-content: space-evenly;
}

.about-words ul {
  padding: 0.5rem;
}

.about-col {
  width: 42%;
  margin: 0 0 0 auto;
}

.about-col-2 {
  margin-right: auto;
  width: 40%;
  float: left;
}

/* Project Cards */
.project-container {
  width: 80%;
  margin: 0 auto;
  align-items: center;
  justify-content: center;
}

.project-container .row {
  margin-bottom: 1rem;
}

.project-container .project-dir:nth-child(2n) {
  direction: rtl;
}

.project-image-col {
  margin: auto 0;
}

.project-heading {
  padding-left: 5rem;
}

.project-card {
  position: relative;
  background-color: #3e3a49;
  color: white;
  text-align: center;
  padding: 1rem;
  padding-top: 2rem;
  height: 27rem;
  border-radius: 21px;
  -webkit-box-shadow: 0px 5px 10px 5px rgba(0, 0, 0, 0.35);
  box-shadow: 0px 5px 10px 5px rgba(0, 0, 0, 0.35);
}

.project-img > div {
  border-radius: 21px;
}

.project-img {
  height: 26rem;
  opacity: 0.9;
}

.project-subtitle {
  font-size: 1rem;
  float: right;
  color: #ff7f50;
  margin: 0 1rem;
}

.project-container
  .project-dir:nth-child(2n)
  .grid-container
  .item2
  .project-card
  .project-subtitle {
  float: left;
}

.project-title {
  font-size: 2.5rem;
  text-align: center;
  position: absolute;
  top: 20%;
  bottom: 0;
  left: 0;
  right: 0;
  padding: 0 1rem;
}

.project-info {
  text-align: left;
  position: absolute;
  top: 35%;
  bottom: 0;
  left: 0;
  right: 0;
  padding: 0 1rem;
  margin: 0 auto;
  width: 80%;
  justify-content: space-between;
}

.project-tags text {
  margin: 0 0.5rem;
}

.project-tags {
  display: flex;
  color: grey;
}

.p-tag {
  margin: 0 0.25rem;
}

.project-btns {
  position: absolute;
  top: 80%;
  bottom: 0;
  left: 0;
  right: 0;
}

.btn-project {
  margin: 0.5rem;
}

/* Contact Page */
.contact-block {
  background-color: var(--background-2);
  height: 90vh;
  text-align: center;
  width: 100%;
  margin: -1rem auto -4rem auto;
  padding: 25vh 0;
}

.contact-heading {
  margin-top: 2rem;
}

.contact-cross {
  margin-right: 13rem;
}
/* ... */

